# discord-telegram-engagement

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  bot_legacy.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-bot.yml  secret-scan.yml
scripts/: scan-secrets.ps1
src/twitter_intel/: __init__.py  main.py
src/twitter_intel/application/: __init__.py  container.py  scheduler.py
src/twitter_intel/application/use_cases/: __init__.py  approve_tweet.py  manual_ingest.py  reject_tweet.py  scan_and_notify.py  smoke_test.py
src/twitter_intel/config/: __init__.py  brand_registry.py  env_utils.py  search_queries.py  settings.py
src/twitter_intel/domain/: __init__.py
src/twitter_intel/domain/entities/: __init__.py  category.py  tweet.py  xss_output.py
src/twitter_intel/domain/interfaces/: __init__.py  ai_classifier.py  notification_service.py  search_provider.py  tweet_repository.py
src/twitter_intel/domain/services/: __init__.py  scoring.py
src/twitter_intel/exceptions/: __init__.py  api_errors.py  base.py
src/twitter_intel/infrastructure/: __init__.py
src/twitter_intel/infrastructure/ai/: __init__.py  gemini_classifier.py  prompts.py
src/twitter_intel/infrastructure/database/: __init__.py  sqlite_repository.py
src/twitter_intelligence_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_discord_gateway_security.py  test_sqlite_repository.py
tests/unit/: __init__.py
tests/unit/application/: test_approve_tweet.py  test_manual_ingest.py  test_reject_tweet.py  test_scan_and_notify.py  test_scheduler.py  test_smoke_test.py
tests/unit/config/: test_brand_registry.py  test_env_utils.py  test_search_queries.py  test_settings.py
tests/unit/domain/: test_category.py  test_scoring.py  test_tweet.py  test_xss_output.py  test_xss_scoring.py
tests/unit/exceptions/: __init__.py  test_exceptions.py
tests/unit/infrastructure/: test_ai_classifiers.py  test_discord_gateway.py  test_notifications.py  test_search_providers.py  test_x_poster.py  test_xai_live_search.py
(+11 files in other folders)
