[project]
name = "twitter-intelligence-bot"
version = "2.0.0"
description = "Social listening and engagement bot for Yara.cash"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yara.cash Team" }
]
keywords = ["twitter", "discord", "bot", "social-listening", "engagement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "discord.py>=2.3",
    "google-generativeai>=0.8",
    "twscrape>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.7",
]

[project.scripts]
twitter-intel = "twitter_intel.main:cli_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["twitter_intel"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv", "bot_legacy.py"]

[[tool.mypy.overrides]]
module = [
    "twscrape.*",
    "google.generativeai.*",
    "discord.*",
]
ignore_missing_imports = true
